# python-automation-sdk

./: .gitignore  README.md  pyproject.toml  setup.py
sanau-automation-sdk/: test.py
src/SanauAutomationSDK/: Api.py  Client.py  FileVault.py  OGD.py  Oked.py  SanauAtomationSDK.py  SanauAutomationSDK.py  Worker.py  __init__.py  config.py
src/SanauAutomationSDK/api/: Api.py  Arm.py  OneS.py  Wrapper.py
src/SanauAutomationSDK/api/handlers/: AlertsHandler.py  DatabasesHandler.py  TasksHandler.py
src/SanauAutomationSDK/api/models/: Alert.py  Task.py
src/SanauAutomationSDK/classes/: ApiCredentials.py
src/SanauAutomationSDK/controllers/: BaseController.py  CountriesController.py  DatabasesController.py  JobsController.py
src/SanauAutomationSDK/database/: DB.py
src/SanauAutomationSDK/utils/: decorators.py
src/sanau_automation_sdk/: Base.py  config.py
src/sanau_automation_sdk_package_victor_ten/: Api.py  Base.py  Client.py  OGD.py  SanauAtomationSDK.py  Urls.py  config.py
unfinished_version/SanauAutomationSDK/: Worker.py  config.py
unfinished_version/SanauAutomationSDK/api/: Arm.py  OneS.py
unfinished_version/SanauAutomationSDK/classes/: ArmApiCredentials.py  DatabaseCredentials.py  OneSApiCredentials.py
unfinished_version/SanauAutomationSDK/controllers/: JobsController.py  TestsController.py
unfinished_version/SanauAutomationSDK/database/: DB.py
unfinished_version/SanauAutomationSDK/exceptions/: odata.py
unfinished_version/SanauAutomationSDK/storage/: job_relations.json
unfinished_version/SanauAutomationSDK/utils/: logutils.py
(+21 files in other folders)
