[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SanauAutomationSDK"
version = "0.0.1"
authors = [
  { name="victor.ten", email="prostobackoffice@gmail.com" },
]
description = "For now test description"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sanau-kz/python-automation-sdk"
Issues = "https://github.com/sanau-kz/python-automation-sdk/issues"